- fix deploy page, operate styles bug

--- a/src/components/Base/Radio/index.scss
+++ b/src/components/Base/Radio/index.scss
@@ -5,6 +5,7 @@
   line-height: 16px;
   vertical-align: middle;
   .radio {
+    display: inline-block;
     margin-right: 24px;
     margin-bottom: 0;
   }
