--- a/src/pages/Admin/Apps/Deploy/index.scss
+++ b/src/pages/Admin/Apps/Deploy/index.scss
@@ -46,9 +46,13 @@
     float: left;
     line-height: 32px;
   }
+  .radioName{
+    float: left;
+    margin-top: 5px;
+  }
   .showWord{
     display: inline-block;
-    max-width: 420px;
+    max-width: 480px;
     line-height: 32px;
   }
 
