--- a/src/pages/Admin/Categories/index.scss
+++ b/src/pages/Admin/Categories/index.scss
@@ -47,7 +47,7 @@
     top: 24px;
     :global {
       .pi-popover-popper {
-        margin-left: -90px;
+        margin-left: -90px !important;
       }
     }
   }
