--- a/src/components/Base/Select/index.scss
+++ b/src/components/Base/Select/index.scss
@@ -32,6 +32,7 @@
   word-break: break-all;
   overflow: hidden;
   .controlLabel {
+    display: inline-block;
     line-height: 24px;
     color: $N300;
   }
@@ -47,6 +48,8 @@
   :global {
     .icon {
       float: right;
+      position: relative;
+      top: 4px;
     }
   }
 }
@@ -76,6 +79,13 @@
     &:hover {
       color: $N500;
       background-color: $N10;
+    }
+    :global{
+      .icon-check{
+        float: right;
+        position: relative;
+        top: 4px;
+      }
     }
   }
 }
