--- a/src/components/Rectangle/index.scss
+++ b/src/components/Rectangle/index.scss
@@ -17,10 +17,10 @@
   }
   .title a{
     display: block;
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     font-size: 20px;
     font-weight: 500;
-    line-height: 1.0;
+    line-height: 32px;
     color: $N500;
     max-width: 300px;
     @include textCut;
