- app detail table column add translate

--- a/src/components/TimeShow/index.scss
+++ b/src/components/TimeShow/index.scss
@@ -8,3 +8,9 @@
   font-size: 12px;
   color: $N100;
 }
+.lineTime{
+  display: inline-block;
+  margin-right: 5px;
+  font-size: 12px;
+  color: $N100;
+}
