--- a/src/components/Base/Pagination/index.scss
+++ b/src/components/Base/Pagination/index.scss
@@ -31,6 +31,7 @@
 
     .btn {
       display: inline-block;
+      box-sizing: border-box;
       cursor: pointer;
       width: 40px;
       height: 32px;
