--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -28,7 +28,9 @@
     list-style: none outside none;
   }
 
-
+  a,a:hover{
+    color: $P75;
+  }
   a, a:hover, a:focus, a:active, a:visited {
     text-decoration: none;
   }
