--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -113,10 +113,10 @@
     margin-left: 0 !important;
   }
 
-  .pi-table-thead > tr > th {
+  /*.pi-table-thead > tr > th {
     line-height: 18px !important;
     padding: 10px 12px !important;
-  }
+  }*/
 
   .actions {
     margin-left: 14px;
