--- a/src/components/Card/index.scss
+++ b/src/components/Card/index.scss
@@ -28,6 +28,7 @@
        img{
          max-width: 100%;
          max-height: 100%;
+         vertical-align: middle;
        }
      }
      .name{
