--- a/src/components/Rectangle/AppImages/index.scss
+++ b/src/components/Rectangle/AppImages/index.scss
@@ -25,6 +25,7 @@
         max-width: 100%;
         max-height: 100%;
         border-radius: 50%;
+        vertical-align: middle;
       }
     }
 
