- add table Updated At column sorter

--- a/src/components/Base/Table/index.scss
+++ b/src/components/Base/Table/index.scss
@@ -62,6 +62,15 @@
           }
         }
       }
+      .sortOuter{
+        :global{
+          .icon{
+            vertical-align: middle;
+            margin-left: 6px;
+            cursor: pointer;
+          }
+        }
+      }
     }
   }
 }
