--- a/src/components/Layout/Card/index.scss
+++ b/src/components/Layout/Card/index.scss
@@ -12,7 +12,7 @@ $card-padding: 24px;
       top: 24px;
       cursor: pointer;
       .pi-popover-popper {
-        margin-left: -90px;
+        margin-left: -90px !important;
       }
     }
   }
