--- a/src/components/Base/Radio/index.scss
+++ b/src/components/Base/Radio/index.scss
@@ -67,10 +67,32 @@
   }
   .text {
     opacity: 0.5;
+    cursor: not-allowed;
+  }
+  &:hover{
+    .circle {
+      background-color: $N0;
+      border-color: $N30;
+    }
   }
   &:active{
     .circle {
       border-color: $N30 !important;
+    }
+  }
+  &.checked {
+    .circle {
+      border: solid 4px $P75;
+    }
+    &:hover{
+      .circle {
+        border-color: $P75;
+      }
+    }
+    &:active{
+      .circle {
+        border-color: $P75 !important;
+      }
     }
   }
 }
