--- a/src/components/Base/Checkbox/index.scss
+++ b/src/components/Base/Checkbox/index.scss
@@ -33,7 +33,6 @@
       font-size: $size-small;
       color: #fff;
       transform: translate(0 ,-50%) scale(0.7);
-      cursor: pointer;
     }
   }
   &::before {
@@ -56,7 +55,6 @@
   &:hover{
     &::before {
       background-color: $N10;
-      border-color: $N30;
     }
   }
   &:active{
@@ -87,11 +85,37 @@
       }
     }
   }
-
-  &.disabled {
+}
+.checkbox[disabled] {
+  opacity: 0.5;
+  &::before {
+    opacity: 0.5;
+    cursor: not-allowed;
+  }
+  &:hover{
     &::before {
-      opacity: 0.5;
-      cursor: not-allowed;
+      background-color: $N0;
+    }
+  }
+  &:active{
+    &::before {
+      border-color: $N30 !important;
+    }
+  }
+  &.checked {
+    &::before {
+      border-color: $P75;
+      background-color: $P75;
+    }
+    &:hover{
+      &::before {
+        background-color: $P75;
+      }
+    }
+    &:active{
+      &::before {
+        background-color: $P75 !important;
+      }
     }
   }
 }
