fix: Checkbox no value props

--- a/src/components/Base/Checkbox/index.scss
+++ b/src/components/Base/Checkbox/index.scss
@@ -72,6 +72,10 @@
       .icon {
         display: block;
         z-index: 3;
+        svg {
+          --primary-color: #{$N0};
+          --secondary-color: #{$N0};
+        }
       }
     }
     &:hover{
