feat: Add transition status based on websocket messages
* Fix routes/api response error check

* Fix Layout component notifications

* Fix all pages fallback error tips

--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -4,6 +4,7 @@
   text-transform: capitalize;
 }
 
+
 .icon {
   display: inline-block;
   vertical-align: middle;
@@ -15,6 +16,8 @@
 
   &.pending {
     background-color: $B75;
+    border-color: $B65;
+    @include transitionStatus;
   }
   &.ceased {
     background-color: $Y100;
@@ -30,6 +33,11 @@
   }
   &.deleted {
     background-color: $R300;
+  }
+  &.stopping {
+    background-color: $B65;
+    border-color: $B45;
+    @include transitionStatus;
   }
 }
 
