--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -48,3 +48,21 @@
   color: $N75;
   letter-spacing: 0;
 }
+
+@mixin transitionStatus {
+  border-width: 2px;
+  border-style: solid;
+  //border-color: transparent;
+  //transform: scale(0.7);
+  animation: transShape 1s infinite linear;
+  animation-delay: 0.5s;
+}
+
+@keyframes transShape {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(0.8);
+  }
+}
