--- a/src/components/Loading/index.scss
+++ b/src/components/Loading/index.scss
@@ -7,7 +7,7 @@
 }
 
 .loading {
-  position: fixed;
+  position: relative;
   top: $header-height;
   bottom: 0;
   left: 0;
@@ -17,7 +17,7 @@
 
   .loadOuter{
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     margin: -3em 0 0 -3em;
 
@@ -31,10 +31,10 @@
       font-size:10px;
       position:relative;
       text-indent:-9999em;
-      border-top:0.1em solid rgba($purple-light,0.2);
-      border-right:0.1em solid rgba($purple-light,0.2);
-      border-bottom:0.1em solid rgba($purple-light,0.2);
-      border-left:0.1em solid rgba($purple-light,1);
+      border-top:0.2em solid rgba($purple-light,0.2);
+      border-right:0.2em solid rgba($purple-light,0.2);
+      border-bottom:0.2em solid rgba($purple-light,0.2);
+      border-left:0.2em solid rgba($purple-light,1);
 
       //-webkit-transform: translateZ(0);
       //-ms-transform: translateZ(0);
@@ -49,15 +49,13 @@
 
 :global {
   .loadTable{
-    position: sticky;
+    position: fixed;
     background-color: #fff;
-    //margin-left: 192px;
-  }
-  .loadTable{
-    position: static;
-    background-color: #fff;
+    opacity: 0.5;
+    margin-top: $header-height + $tabNavs-height + 5px;
+
     .loadOuter{
-      position: static;
+      position: relative;
       padding: 30px 0 50px;
       .loader {
         margin: 0 auto;
