feat: Add new app detail page
* feat: Modify layout style for adaptive

--- a/src/components/Layout/Grid/index.scss
+++ b/src/components/Layout/Grid/index.scss
@@ -6,7 +6,7 @@ $row-gap: 24px;
 .container {
   display: flex;
   flex-flow: row nowrap;
-  width: $content-width;
+  //width: $content-width;
   margin: 0 auto;
   justify-content: space-between;
   //margin-top: 80px;
