--- a/src/pages/Admin/Apps/Add/StepContent/index.scss
+++ b/src/pages/Admin/Apps/Add/StepContent/index.scss
@@ -13,7 +13,7 @@
 @-webkit-keyframes load {@include load-frames;}
 @keyframes load {@include load-frames;}
 
-.createVersion{
+.stepContent{
   width: 100%;
   margin-top: 72px;
   text-align: center;
