--- a/src/pages/Admin/Categories/index.scss
+++ b/src/pages/Admin/Categories/index.scss
@@ -1,17 +1,13 @@
 @import '~scss/vars';
 
-.container {
-  width: $content-width;
-  margin: 0 auto;
-
-  .pageTitle{
-    height: 24px;
-    font-size: 20px;
-    font-weight: 500;
-    text-align: left;
-    color: $N500;
-  }
+.pageTitle{
+  height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: left;
+  color: $N500;
 }
+
 .categories{
   text-align: center;
   padding: 12px 24px;
@@ -37,8 +33,9 @@
 .categoryContent {
   display: inline-block;
   position: relative;
+  width: calc(33.333% - 16px);
   margin: 0 24px 24px 0;
-  &:nth-child(3n+2) {
+  &:nth-child(3n+3) {
     margin-right: 0;
   }
   .handlePop {
@@ -54,8 +51,8 @@
   .rectangle{
     display: inline-block;
     box-sizing: border-box;
+    width: 100%;
     padding: 24px;
-    width: 1128px;
     height: 140px;
     background-color: $N0;
     box-shadow: 0 1px 4px 0 rgba(48, 14, 86, 0.06), 0 4px 8px 0 rgba(0, 0, 0, 0.04);
