--- a/src/pages/Admin/Repos/index.scss
+++ b/src/pages/Admin/Repos/index.scss
@@ -1,15 +1,11 @@
 @import '~scss/vars';
-.container {
-  width: $content-width;
-  margin: 0 auto;
-  .title{
-    height: 24px;
-    font-size: 20px;
-    font-weight: 500;
-    text-align: left;
-    margin-bottom: 24px;
-    color: $N500;
-  }
+.pageTitle{
+  height: 24px;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: left;
+  margin-bottom: 24px;
+  color: $N500;
 }
 
 
