refactor: Repo pages can listen to socket
Fix cluster detail listenToJob

--- a/src/components/Layout/Card/index.scss
+++ b/src/components/Layout/Card/index.scss
@@ -17,3 +17,14 @@ $card-padding: 24px;
     }
   }
 }
+
+.tableCard {
+  padding: $card-padding;
+
+  :global {
+    .loadTable {
+      position: sticky !important;
+      margin-top: 0;
+    }
+  }
+}
