feat: Cluster and repo pages can listen to websocket messages (#315)
* Fix routes/api response error check
* Fix Layout component notifications,  remove sockMessage
* Fix all pages fallback error tips
* Remove `apiMsg`, `showMsg` in root store, delegate to notify message

--- a/src/components/Status/index.scss
+++ b/src/components/Status/index.scss
@@ -4,6 +4,7 @@
   text-transform: capitalize;
 }
 
+
 .icon {
   display: inline-block;
   vertical-align: middle;
@@ -13,9 +14,7 @@
   border-radius: 50%;
   font-style: normal;
 
-  &.pending {
-    background-color: $B75;
-  }
+
   &.ceased {
     background-color: $Y100;
   }
@@ -25,11 +24,41 @@
   &.suspended {
     background-color: $Y100;
   }
-  &.active {
+  &.active, &.successful {
     background-color: $G75;
   }
   &.deleted {
     background-color: $R300;
+  }
+
+  &.running,
+  &.working,
+  &.starting,
+  &.pending,
+  &.updating,
+  &.stopping {
+    @include transitionStatus;
+  }
+
+  &.starting {
+    background-color: $P75;
+    border-color: $P65;
+  }
+  &.running, &.working {
+    background-color: $G200;
+    border-color: $G100;
+  }
+  &.updating {
+    background-color: $Y75;
+    border-color: $Y65;
+  }
+  &.stopping {
+    background-color: $Y300;
+    border-color: $Y200;
+  }
+  &.pending {
+    background-color: $B75;
+    border-color: $B65;
   }
 }
 
