--- a/src/pages/AppDetail/Body/Helm/index.scss
+++ b/src/pages/AppDetail/Body/Helm/index.scss
@@ -106,7 +106,7 @@
       }
 
       code {
-        font-family: RobotoMono;
+        font-family: RobotoMono sans-serif;
         margin: 0 2px;
       }
 
@@ -218,15 +218,11 @@
       }
       /* override default chrome & firefox settings */
       input:not([type="image"]), textarea {
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
         box-sizing: content-box;
       }
 
       input[type="search"] {
         -webkit-appearance: textfield;
-        -webkit-box-sizing: content-box;
-        -moz-box-sizing: content-box;
         box-sizing: content-box;
       }
       input[type="search"]::-webkit-search-decoration {
@@ -259,8 +255,6 @@
         height: 18px;
         color: #808080;
         border: 1px solid #ccc;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
         border-radius: 3px;
       }
       select, input[type=file] {
@@ -281,18 +275,12 @@
       input[type=password],
       select,
       textarea {
-        -webkit-transition: border linear 0.2s, box-shadow linear 0.2s;
-        -moz-transition: border linear 0.2s, box-shadow linear 0.2s;
         transition: border linear 0.2s, box-shadow linear 0.2s;
-        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
         box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
       }
       input[type=text]:focus, input[type=password]:focus, textarea:focus {
         outline: none;
         border-color: rgba(82, 168, 236, 0.8);
-        -webkit-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
-        -moz-box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
         box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1), 0 0 8px rgba(82, 168, 236, 0.6);
       }
       /* buttons */
@@ -302,29 +290,16 @@
         font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
         font-size: 13px;
         line-height: 18px;
-        -webkit-border-radius: 4px;
-        -moz-border-radius: 4px;
         border-radius: 4px;
-        -webkit-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
-        -moz-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
         box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.2), 0 1px 2px rgba(0, 0, 0, 0.05);
         background-color: #0064cd;
         background-repeat: repeat-x;
-        background-image: -khtml-gradient(linear, left top, left bottom, from(#049cdb), to(#0064cd));
-        background-image: -moz-linear-gradient(top, #049cdb, #0064cd);
-        background-image: -ms-linear-gradient(top, #049cdb, #0064cd);
-        background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #049cdb), color-stop(100%, #0064cd));
-        background-image: -webkit-linear-gradient(top, #049cdb, #0064cd);
-        background-image: -o-linear-gradient(top, #049cdb, #0064cd);
-        background-image: linear-gradient(top, #049cdb, #0064cd);
+        background-image: linear-gradient(to top, #049cdb, #0064cd);
         color: #fff;
         text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
         border: 1px solid #004b9a;
         border-bottom-color: #003f81;
-        -webkit-transition: 0.1s linear all;
-        -moz-transition: 0.1s linear all;
         transition: 0.1s linear all;
-        border-color: #0064cd #0064cd #003f81;
         border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
       }
       button:hover {
@@ -333,8 +308,6 @@
         text-decoration: none;
       }
       button:active {
-        -webkit-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
-        -moz-box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
         box-shadow: inset 0 3px 7px rgba(0, 0, 0, 0.15), 0 1px 2px rgba(0, 0, 0, 0.05);
       }
       button::-moz-focus-inner {
@@ -359,16 +332,11 @@
       }
       table tr:hover {
         background-color: $tr-hover-bg;
-        -o-transition: all 0.1s ease-in-out;
-        -webkit-transition: all 0.1s ease-in-out;
-        -moz-transition: all 0.1s ease-in-out;
-        -ms-transition: all 0.1s ease-in-out;
         transition: all 0.1s ease-in-out;
       }
       table td, .table th {
         border-left: 1px solid $N10;
         border-top: 1px solid $N10;
-        padding: 10px;
         text-align: left;
         padding: 13px 8px;
         line-height: 16px;
@@ -404,28 +372,18 @@
       }
 
       table th:first-child {
-        -moz-border-radius: 6px 0 0 0;
-        -webkit-border-radius: 6px 0 0 0;
         border-radius: 6px 0 0 0;
       }
       table th:last-child {
-        -moz-border-radius: 0 6px 0 0;
-        -webkit-border-radius: 0 6px 0 0;
         border-radius: 0 6px 0 0;
       }
       table th:only-child{
-        -moz-border-radius: 6px 6px 0 0;
-        -webkit-border-radius: 6px 6px 0 0;
         border-radius: 6px 6px 0 0;
       }
       table tr:last-child td:first-child {
-        -moz-border-radius: 0 0 0 6px;
-        -webkit-border-radius: 0 0 0 6px;
         border-radius: 0 0 0 6px;
       }
       table tr:last-child td:last-child {
-        -moz-border-radius: 0 0 6px 0;
-        -webkit-border-radius: 0 0 6px 0;
         border-radius: 0 0 6px 0;
       }
     }
