--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -2,12 +2,58 @@
 
 $profile-hover-color: #efe6f8;
 
+@keyframes deepHeader {
+  from {
+    opacity: 0;
+    background: transparent;
+  }
+  to {
+    opacity: 1;
+    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
+  }
+}
+
 .header {
   position: absolute;
   top: 0;
   width: 100%;
   height: $header-height;
+  z-index: 999;
   background: none;
+
+  &.deep, &.deepHome {
+    position: fixed;
+    .menus {
+      a {
+        color: $N0;
+      }
+      .role{
+        [class*='target']{
+          color: $N0;
+
+          :global{
+            .icon-caret-down{
+              svg {
+                --primary-color: #{$N0};
+                --secondary-color: #{$N0};
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &.deep {
+    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
+  }
+  &.deepHome {
+    animation-duration: 0.5s;
+    animation-name: deepHeader;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+  }
 
   .wrapper {
     width: $content-width;
@@ -82,31 +128,6 @@ $profile-hover-color: #efe6f8;
     }
   }
 
-}
-
-.stickyHeader {
-  position: fixed;
-  top: 0;
-  z-index: 999;
-  background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
-  .menus {
-    a {
-      color: $N0;
-    }
-    .role{
-      [class*='target']{
-        color: $N0;
-        :global{
-          .icon-caret-down{
-            svg {
-              --primary-color: #{$N0};
-              --secondary-color: #{$N0};
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
 .menus {
