--- a/src/components/Statistics/Histogram/index.scss
+++ b/src/components/Statistics/Histogram/index.scss
@@ -3,6 +3,7 @@
 .histogram{
   float: right;
   display: inline-block;
+  margin-right: 12px;
   .column{
     position: relative;
     display: inline-block;
