--- a/src/components/TdName/index.scss
+++ b/src/components/TdName/index.scss
@@ -91,10 +91,10 @@
   }
   .largeShow{
     [class*='name'] {
-      width: 240px !important;
+      //width: 240px !important;
     }
     [class*='description'] {
-      width: 240px !important;
+      //width: 240px !important;
     }
   }
 }
