--- a/src/components/Layout/index.scss
+++ b/src/components/Layout/index.scss
@@ -1,12 +1,19 @@
 @import '~scss/vars';
 
 .layout {
-  padding-top: $header-height + $tabNavs-height + 32px;
+  padding-top: $layout-top;
   //padding-bottom: $page-bottom;
-  min-height: $main-min-height;
+  min-height: $content-height;
+  width: $content-width;
+  margin: 0 auto;
 
+  &.hasMenu{
+    margin: 68px 20px 20px $menu-width+20px;
+    width: calc(100% - #{$menu-width} - 40px);
+    padding-top: 0;
+  }
   .backBtn{
-    width: $content-width;
+    //width: $content-width;
     margin: 0 auto 20px;
     font-size: $size-normal;
     line-height: 1.43;
@@ -33,6 +40,73 @@
     position: fixed;
     top: 70px;
     left: 88%;
+  }
+}
+
+.titleBanner{
+  position: fixed;
+  top: 48px;
+  left: 0;
+  z-index: 3;
+  width: 100%;
+  height: $title-banner-height;
+  background-color: $N0;
+  box-shadow: 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+
+  .wrapper{
+    width: $content-width;
+    margin: 20px auto;
+  }
+
+  .name{
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 32px;
+    letter-spacing: 0;
+    color: #343945;
+  }
+
+  .search {
+    float: right;
+    width: 360px;
+    i {
+      color: $N65;
+    }
+    &:hover {
+      i {
+        color: $P100;
+      }
+    }
+    input {
+      color: $N500;
+      padding-left: 36px;
+      border-radius: 16px;
+      border: 1px solid transparent;
+      background-color: $N10;
+      transition: all .3s ease-in-out;
+      &::placeholder {
+        font-size: 14px;
+        color: $N45;
+        line-height: 1.0;
+        letter-spacing: 0;
+      }
+      &:focus {
+        border: solid 1px $P75 !important;
+      }
+
+      &:hover {
+        border: solid 1px $N45;
+      }
+    }
+    :global {
+      .icon {
+        color: $N65;
+        opacity: 0.5;
+        &:hover, &:focus {
+          opacity: 1;
+        }
+      }
+    }
   }
 }
 
