feat: Modify layout style  for admin and normal (#333)
* feat: Add app create page

* feat: Add file Upload component

* feat: Add new app detail page

* feat: Add store page

* feat: Modify layout style for adaptive

* feat: Modify pages layout for admin and normal

--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -2,12 +2,58 @@
 
 $profile-hover-color: #efe6f8;
 
+@keyframes deepHeader {
+  from {
+    opacity: 0;
+    background: transparent;
+  }
+  to {
+    opacity: 1;
+    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
+  }
+}
+
 .header {
   position: absolute;
   top: 0;
   width: 100%;
   height: $header-height;
+  z-index: 999;
   background: none;
+
+  &.deep, &.deepHome {
+    position: fixed;
+    .menus {
+      a {
+        color: $N0;
+      }
+      .role{
+        [class*='target']{
+          color: $N0;
+
+          :global{
+            .icon-caret-down{
+              svg {
+                --primary-color: #{$N0};
+                --secondary-color: #{$N0};
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+
+  &.deep {
+    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
+  }
+  &.deepHome {
+    animation-duration: 0.5s;
+    animation-name: deepHeader;
+    animation-iteration-count: 1;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+  }
 
   .wrapper {
     width: $content-width;
@@ -15,6 +61,7 @@ $profile-hover-color: #efe6f8;
   }
 
   .logo {
+    float: left;
     width: auto;
     height: $logo-height;
     display: inline-block;
@@ -87,88 +134,82 @@ $profile-hover-color: #efe6f8;
 .stickyHeader {
   position: fixed;
   top: 0;
-  z-index: 999;
+  z-index: 99;
   background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
-  .menus {
-    a {
-      color: $N0;
-    }
-    .role{
-      [class*='target']{
-        color: $N0;
-        :global{
-          .icon-caret-down{
-            svg {
-              --primary-color: #{$N0};
-              --secondary-color: #{$N0};
-            }
-          }
-        }
-      }
-    }
-  }
 }
 
-.menus {
-  float: right;
-  line-height: $header-height;
-  a {
-    opacity: 0.9;
-    color: $N500;
-    font-weight: 500;
-    &:hover {
-      opacity: 1;
+.menuOuter {
+  .menus{
+    float: left;
+    margin-left: 50px;
+    a{
+      display: inline-block;
+      margin: 0 12px;
+      padding: 13px 0;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 20px;
+      color: $N0;
+      &.active{
+        border-bottom: 2px solid $Y200;
+      }
     }
   }
-  .role{
-    [class*='target']{
-      margin: 14px 0;
-      width: auto;
-      height: auto;
-      line-height: 20px;
-      opacity: 0.9;
-      color: $N500;
-      font-weight: 500;
+
+  .user [class*='target']{
+    float: right;
+    margin: 12px 24px;
+    height: 20px;
+    width: auto;
+    line-height: 20px;
+    opacity: 0.9;
+    color: $N0;
+    font-weight: 500;
+    border: 0 none;
+    &:hover{
       border: 0 none;
-      &:hover{
-        box-shadow: none;
-        opacity: 1;
-      }
-      :global{
-        .icon-caret-down{
-          position: relative;
-          top: 3px;
-          left: 2px;
-          svg {
-            --primary-color: #{$N500};
-            --secondary-color: #{$N500};
-          }
-        }
-      }
+      box-shadow: none;
+      opacity: 1;
     }
     :global{
-      .pi-popover-popper{
-        margin-left: -69px;
-        margin-top: 6px;
-      }
-    }
-    .operateItems{
-      min-width: 120px;
-      li a{
-        display: block;
-        height: 32px;
-        padding: 0 12px;
-        //width: 100%;
-        line-height: 32px;
-        font-size: $font14;
-        font-weight: normal;
-        color: $N300;
-        border-radius: 0;
-        &:hover {
-          background-color: $N10;
-          color: $N500;
+      .icon-caret-down{
+        position: relative;
+        top: 3px;
+        left: 2px;
+        svg {
+          --primary-color: #{$N0};
+          --secondary-color: #{$N0};
         }
       }
+    }
+  }
+
+  .operateItems{
+    min-width: 120px;
+    li a{
+      display: block;
+      height: 32px;
+      padding: 0 12px;
+      //width: 100%;
+      line-height: 32px;
+      font-size: $font14;
+      font-weight: normal;
+      color: $N300;
+      border-radius: 0;
+      &:hover {
+        background-color: $N10;
+        color: $N500;
+      }
+      &.line{
+        border-bottom: 1px solid $N10;
+      }
+    }
+  }
+  
+  :global{
+    .pi-popover-popper{
+      margin-left: -85px !important;
+      margin-top: 6px !important;
     }
   }
 }
