feat: Add purchased page

--- a/src/components/Menu/index.scss
+++ b/src/components/Menu/index.scss
@@ -120,7 +120,7 @@
   width: 100%;
   background-color: $background-color;
 
-  .role [class*='target']{
+  .user [class*='target']{
     float: right;
     margin: 12px 24px;
     height: 20px;
