--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -21,32 +21,30 @@ $profile-hover-color: #efe6f8;
   z-index: 999;
   background: none;
 
+  &.deep {
+    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
+  }
+
   &.deep, &.deepHome {
     position: fixed;
-    .menus {
-      a {
-        color: $N0;
-      }
-      .role{
-        [class*='target']{
-          color: $N0;
 
-          :global{
-            .icon-caret-down{
-              svg {
-                --primary-color: #{$N0};
-                --secondary-color: #{$N0};
-              }
-            }
-          }
+    .login{
+      color: $N0;
+    }
+
+    .user [class*='target']{
+      color: $N0;
+
+      :global{
+        .icon-caret-down svg{
+          --primary-color: #{$N0};
+          --secondary-color: #{$N0};
         }
       }
     }
   }
 
-  &.deep {
-    background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
-  }
+
   &.deepHome {
     animation-duration: 0.5s;
     animation-name: deepHeader;
@@ -57,6 +55,7 @@ $profile-hover-color: #efe6f8;
 
   .wrapper {
     width: $content-width;
+    height: $header-height;
     margin: 0 auto;
   }
 
@@ -129,30 +128,17 @@ $profile-hover-color: #efe6f8;
     }
   }
 
-}
+  .login{
+    float: right;
+    display: inline-block;
+    margin: 14px 0;
+    line-height: 20px;
+    color: $N500;
+    font-weight: 500;
+    opacity: 0.9;
 
-.stickyHeader {
-  position: fixed;
-  top: 0;
-  z-index: 99;
-  background: linear-gradient(to left, $P75, #854fb9 32%, #484999);
-}
-
-.menuOuter {
-  .menus{
-    float: left;
-    margin-left: 50px;
-    a{
-      display: inline-block;
-      margin: 0 12px;
-      padding: 13px 0;
-      font-size: 14px;
-      font-weight: 500;
-      line-height: 20px;
-      color: $N0;
-      &.active{
-        border-bottom: 2px solid $Y200;
-      }
+    &:hover{
+      opacity: 1;
     }
   }
 
@@ -163,22 +149,24 @@ $profile-hover-color: #efe6f8;
     width: auto;
     line-height: 20px;
     opacity: 0.9;
-    color: $N0;
+    color: $N500;
     font-weight: 500;
     border: 0 none;
+
     &:hover{
       border: 0 none;
       box-shadow: none;
       opacity: 1;
     }
+
     :global{
       .icon-caret-down{
         position: relative;
         top: 3px;
         left: 2px;
         svg {
-          --primary-color: #{$N0};
-          --secondary-color: #{$N0};
+          --primary-color: #{$N500};
+          --secondary-color: #{$N500};
         }
       }
     }
@@ -205,11 +193,30 @@ $profile-hover-color: #efe6f8;
       }
     }
   }
-  
+
   :global{
     .pi-popover-popper{
-      margin-left: -85px !important;
+      margin-left: -62px !important;
       margin-top: 6px !important;
+    }
+  }
+}
+
+.menuOuter {
+  .menus{
+    float: left;
+    margin-left: 50px;
+    a{
+      display: inline-block;
+      margin: 0 12px;
+      padding: 13px 0;
+      font-size: 14px;
+      font-weight: 500;
+      line-height: 20px;
+      color: $N0;
+      &.active{
+        border-bottom: 2px solid $Y200;
+      }
     }
   }
 }
