feat: Add profile pages
* refactor: Modify layout style

--- a/src/components/Footer/index.scss
+++ b/src/components/Footer/index.scss
@@ -4,7 +4,7 @@
   position: static;
   //bottom: 0;
   width: 100%;
-  padding-top: 84px;
+  padding-top: $footer-padding-top;
 
   .wrapper {
     height: $footer-height;
