--- a/src/scss/partial/_grid.scss
+++ b/src/scss/partial/_grid.scss
@@ -13,11 +13,12 @@ $layout-margin: 156px;
 $nav-width: 264px;
 $header-height: 48px;
 $title-banner-height: 72px;
-$layout-top: $header-height + $title-banner-height + 20px;
+$layout-top: $header-height + $title-banner-height + 40px;
 $tabNavs-height: 48px;
 $banner-height: 400px;
 $footer-height: 64px;
-$content-height: calc(100vh - #{$footer-height} - #{$layout-top});
+$footer-padding-top: 84px;
+$content-height: calc(100vh - #{$footer-height} - #{$footer-padding-top});
 $base-margin: 24px;
 $card-width: 264px;
 
