--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -46,8 +46,8 @@
   .main {
     position: relative;
     width: 100%;
-    min-width: $content-width;
-    min-height: $main-height;
+    //min-width: $content-width;
+    //min-height: $main-height;
     height: auto;
     margin: 0 auto;
   }
