--- a/src/pages/Admin/Apps/index.scss
+++ b/src/pages/Admin/Apps/index.scss
@@ -1,1 +1,74 @@
 @import '~scss/vars';
+
+.appCardContent {
+  >a{
+    display: inline-block;
+    margin: 0 20px 20px 0;
+    width: calc(25% - 15px);
+
+    &:nth-child(4n+4) {
+      margin-right: 0;
+    }
+  }
+}
+
+.appCard {
+  display: inline-block;
+  box-sizing: border-box;
+  width: 100%;
+  height: 207px;
+  padding: 40px 20px 20px;
+  border-radius: 2px;
+  background-color: $N0;
+  box-shadow: 0 1px 4px 0 rgba(73, 33, 173, 0.06), 0 4px 8px 0 rgba(35, 35, 36, 0.04);
+  text-align: center;
+  cursor: pointer;
+
+  .icon {
+    display: inline-block;
+    width: 48px;
+    height: 48px;
+    line-height: 48px;
+    margin-bottom: 12px;
+    border-radius: 2px;
+    img{
+      max-width: 100%;
+      max-height: 100%;
+      vertical-align: middle;
+    }
+  }
+
+  .name {
+    margin-bottom: 12px;
+    padding-bottom: 12px;
+    font-size: 14px;
+    line-height: 16px;
+    font-weight: 500;
+    color: $N500;
+    border-bottom: 1px solid $N10;
+    @include textCut;
+  }
+
+  .description {
+    height: 40px;
+    font-size: 12px;
+    line-height: 20px;
+    letter-spacing: 0;
+    text-align: center;
+    color: $N100;
+    overflow: hidden;
+    word-break: break-all;
+  }
+}
+
+.appTable {
+  :global {
+    .pi-table-content {
+      min-width: 850px;
+    }
+  }
+}
+
+.provider{
+  max-width: 115px;
+}
